Switched to vscode

--- a/embra_connect_modules/server/public/pages/config.html
+++ b/embra_connect_modules/server/public/pages/config.html
@@ -36,9 +36,9 @@
                         <!-- Link item -->
                         <li class="link-item">
                             <!-- Link -->
-                            <a href="./notebook.html" class="link">
+                            <a href="./editor.html" class="link">
                                 <ion-icon name="book" class="side-menu-icon"></ion-icon>
-                                Notebook
+                                Code Editor
                             </a>
                         </li>
                         <!-- Link item -->
@@ -82,7 +82,7 @@
                                 <ion-icon name="person" class="side-menu-icon profile-icon"></ion-icon>
                                 <!-- Link -->
                                 <a href="#" class="profile-link">
-                                    Aaron Ertler
+                                    EC User
                                 </a>
                             </div>
                         </li>
