--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -36,9 +36,9 @@
                         <!-- Link item -->
                         <li class="link-item active">
                             <!-- Link -->
-                            <a href="./notebook.html" class="link active">
+                            <a href="./editor.html" class="link active">
                                 <ion-icon name="book" class="side-menu-icon active-icon"></ion-icon>
-                                Notebook
+                                Code Editor
                             </a>
                         </li>
                         <!-- Link item -->
@@ -85,7 +85,7 @@
                                 <ion-icon name="person" class="side-menu-icon profile-icon"></ion-icon>
                                 <!-- Link -->
                                 <a href="#" class="profile-link">
-                                    Aaron Ertler
+                                    EC User
                                 </a>
                             </div>
                         </li>
@@ -94,8 +94,8 @@
 
                 <!-- Page content -->
                 <div class="page-content">
-                    <!-- Interactive notebook -->
-                    <iframe title="notebook" class="notebook" src="http://localhost:8888/doc/tree/config.ipynb" width="100%"></iframe>
+                    <!-- Interactive Code Editor -->
+                    <iframe title="notebook" class="notebook" src="http://localhost:8443/?folder=/config/workspace" width="100%"></iframe>
 
                 </div>
             </div>
