--- a/embra_connect_modules/server/public/pages/dashboard.html
+++ b/embra_connect_modules/server/public/pages/dashboard.html
@@ -36,9 +36,9 @@
                         <!-- Link item -->
                         <li class="link-item">
                             <!-- Link -->
-                            <a href="./notebook.html" class="link">
+                            <a href="./editor.html" class="link">
                                 <ion-icon name="book" class="side-menu-icon"></ion-icon>
-                                Notebook
+                                Code Editor
                             </a>
                         </li>
                         <!-- Link item -->
