--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -1,27 +1,34 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Embra Connect | ETL" />
+    <meta property="og:description"
+        content="Embra Connect is an open-source tool designed to streamline your ETL processes, making data integration simpler and more efficient. Unlike Databricks, Embra Connect can be run both locally and in the cloud, providing unmatched flexibility for data professionals." />
+    <meta property="og:url" content="http://localhost:5500" />
+    <meta property="og:image" content="http://localhost:5500/assets/padded_logo.png" />
     <title>Embra Connect | Home</title>
+    <link rel="stylesheet" href="./static/css/style.css" />
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="./static/css/style.css">
-
-    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" type="image/x-icon">
+    <!--============= TOASTER ============= -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- =================================== -->
 </head>
 
 <body>
     <main id="app">
         <!-- Main container -->
         <div class="landing-page-container">
-
-            <div class="landing-page-content">
-                LANDING
-            </div>
+            <div class="landing-page-content">LANDING</div>
         </div>
     </main>
-
 
     <!-- Ionicons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -29,7 +36,7 @@
 
     <!-- Additional modules -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="./static/js/app.js"></script>
+    <script src="./static/js/scripts/landing/app.js"></script>
 </body>
 
 </html>
