Updated Docker configuration

--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -95,7 +95,7 @@
                 <!-- Page content -->
                 <div class="page-content">
                     <!-- Interactive Code Editor -->
-                    <iframe title="notebook" class="notebook" src="http://localhost:8443/?folder=/config/workspace" width="100%"></iframe>
+                    <iframe title="notebook" class="notebook" src="http://localhost:8081" width="100%"></iframe>
 
                 </div>
             </div>
