--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Embra Connect | Notebook</title>
-
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Embra Connect | ETL" />
+    <meta property="og:description"
+        content="Embra Connect is an open-source tool designed to streamline your ETL processes, making data integration simpler and more efficient. Unlike Databricks, Embra Connect can be run both locally and in the cloud, providing unmatched flexibility for data professionals." />
+    <meta property="og:url" content="http://localhost:5500" />
+    <meta property="og:image" content="http://localhost:5500/assets/padded_logo.png" />
+    <title>Embra Connect | Code Editor</title>
     <link rel="stylesheet" href="../static/css/style.css" />
+    <link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon" />
 
-    <link
-      rel="shortcut icon"
-      href="../assets/favicons/favicon.ico"
-      type="image/x-icon"
-    />
+    <!--============= TOASTER ============= -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- =================================== -->
   </head>
 
   <body>
@@ -122,16 +129,17 @@
 
         <!-- Prompt Interface -->
         <div class="prompt-container">
+          <!-- Model Info. -->
+          <h2 class="model-name">
+            <ion-icon name="chatbubbles" class="chat-icon"></ion-icon>
+            Need Assistance? Ask Lexara!
+          </h2>
 
-            <!-- Model Info. -->
-            <h2 class="model-name">
-                <ion-icon name="chatbubbles" class="chat-icon"></ion-icon>
-                Need Assistance? Ask Lexara!
-            </h2>
-
-            <p class="model-description">
-                Lexara is our advanced language model, here to help with any questions or problems you have. Just type your query below and hit "Submit" to get an instant response from Lexara.
-            </p>
+          <p class="model-description">
+            Lexara is our advanced language model, here to help with any
+            questions or problems you have. Just type your query below and hit
+            "Submit" to get an instant response from Lexara.
+          </p>
           <input
             type="text"
             id="prompt-input"
@@ -166,29 +174,50 @@
     <script src="../static/js/charts/doughnut-chart.js"></script>
 
     <script>
-         document.getElementById('prompt-button').addEventListener('click', async () => {
-        const promptInput = document.getElementById('prompt-input').value;
-        if (promptInput.trim() === '') {
-            alert('Please enter a prompt.');
+      document
+        .getElementById("prompt-button")
+        .addEventListener("click", async () => {
+          const promptInput = document.getElementById("prompt-input").value;
+          if (promptInput.trim() === "") {
+            Toastify({
+              text: "Please enter a prompt.",
+              duration: 3000,
+              newWindow: true,
+              close: false,
+              gravity: "bottom",
+              position: "right",
+              stopOnFocus: true,
+              style: {
+                background: "#f38041",
+                color: "#ffffff",
+                borderRadius: "9px 21px 64px 32px",
+                fontWeight: "300",
+                letterSpacing: "1.4px",
+                textTransform: "capitalize",
+                boxShadow: "0 1rem 1rem 0 rgba(0, 0, 0, .1)",
+              },
+              // Handle callback after click.
+              onClick: function () {},
+            }).showToast();
             return;
-        }
+          }
 
-        // Simulate an LLM response (replace this with actual API call to get the response from your LLM)
-        const response = await getLLMResponse(promptInput);
+          // Simulate an LLM response (replace this with actual API call to get the response from your LLM)
+          const response = await getLLMResponse(promptInput);
 
-        // Display the response
-        document.getElementById('response-content').innerText = response;
-        document.getElementById('response-container').style.display = 'block';
-    });
-
-    // Simulated function to mimic getting a response from an LLM
-    async function getLLMResponse(prompt) {
-        return new Promise(resolve => {
-            setTimeout(() => {
-                resolve(`This is a simulated response for the prompt: "${prompt}"`);
-            }, 1000);
+          // Display the response
+          document.getElementById("response-content").innerText = response;
+          document.getElementById("response-container").style.display = "block";
         });
-    }
+
+      // Simulated function to mimic getting a response from an LLM
+      async function getLLMResponse(prompt) {
+        return new Promise((resolve) => {
+          setTimeout(() => {
+            resolve(`This is a simulated response for the prompt: "${prompt}"`);
+          }, 1000);
+        });
+      }
     </script>
   </body>
 </html>
