--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -56,8 +56,22 @@
               <strong>in the cloud</strong>, providing unmatched flexibility for
               data professionals.
             </p>
+
+            <!-- CTA buttons -->
+            <div class="cta-btns">
+              <button class="btn navigate-to-dashboard">
+                <a href="./pages/dashboard.html"> View Dashboard </a>
+              </button>
+
+              <button class="btn navigate-to-dashboard">
+                Create an Account
+              </button>
+
+              <button class="btn navigate-to-dashboard">View Dashboard</button>
+            </div>
           </div>
 
+          <!-- Key Features -->
           <h2 class="features-list-title">Key <span>Features</span></h2>
           <ul class="features-list">
             <li>
