--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -90,10 +90,9 @@
               distributed data processing for large-scale data operations.
             </li>
             <li>
-              <strong>Polars for High-Performance Computing</strong> Utilize
-              Polars for high-performance, multithreaded computing on single
-              nodes, offering significant improvements in speed and memory
-              efficiency.
+              <strong>Polars</strong> Utilize Polars for high-performance,
+              multithreaded computing on single nodes, offering significant
+              improvements in speed and memory efficiency.
             </li>
             <li>
               <strong>Composable and Strict API</strong> Benefit from a more
@@ -122,9 +121,9 @@
               machine or in the cloud.
             </li>
             <li>
-              <strong>Secrets Management with HashiCorp Vault</strong> Securely
-              manage your secrets using HashiCorp's Vault, ensuring your data is
-              protected at all times.
+              <strong>Secrets Management</strong> Securely manage your secrets
+              using HashiCorp's Vault, ensuring your data is protected at all
+              times.
             </li>
           </ul>
 
