--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -31,7 +31,7 @@
             <div class="logo-container">
               <img
                 src="../assets/png/color_logo_no_bg.png"
-                alt=""
+                alt="logo"
                 class="logo"
               />
             </div>
