--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -28,7 +28,7 @@
   <script src="./static/js/scripts/common/preloader.js"></script>
 </head>
 
-<body>
+<body onload="preloader()">
   <div id="loader"></div>
 
   <main id="app" class="animate-bottom">
