Added sign in button.

--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -56,6 +56,11 @@
               Create an Account
             </button>
 
+            
+            <button class="btn navigate-to-dashboard">
+              Sign In
+            </button>
+
             <button class="btn navigate-to-dashboard">Documentation</button>
           </div>
         </div>
