Added preloader to Editor page.

--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -24,7 +24,7 @@
 
   <!-- MAIN PAGE STYLING -->
   <link rel="stylesheet" href="./static/css/landing.css" />
-  <link rel="stylesheet" href="./static/css/preloader.css">
+  <link rel="stylesheet" href="./static/css/common/preloader.css">
   <script src="./static/js/scripts/common/preloader.js"></script>
 </head>
 
