--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -104,9 +104,9 @@
         <!-- Page content -->
         <div id="page-content" class="page-content">
           <!-- Preloader -->
-           <div id="loader"></div>
+          <!-- <div id="loader"></div> -->
           <!-- Interactive Code Editor -->
-          <iframe title="notebook" id="editor" class="notebook" src="http://localhost:8081" width="100%" loading="lazy"></iframe>
+          <iframe title="notebook" id="editor" class="notebook" src="http://localhost:8080/" width="100%"></iframe>
         </div>
       </div>
 
