Update notebook url.

--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -106,7 +106,7 @@
           <!-- Preloader -->
           <div id="loader"></div>
           <!-- Interactive Code Editor -->
-          <iframe title="notebook" id="editor" class="notebook" src="http://localhost:8888/" width="100%"></iframe>
+          <iframe title="notebook" id="editor" class="notebook" src="http://localhost:8888/doc" width="100%"></iframe>
         </div>
       </div>
 
