--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -126,6 +126,7 @@
         </div>
 
         <div class="logos-container">
+          <img src="./assets/connections/garage-logo.svg" alt="Garage Logo" />
           <img src="https://upload.wikimedia.org/wikipedia/commons/3/38/Jupyter_logo.svg" alt="Jupyter Logo" />
           <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Docker_%28container_engine%29_logo.svg"
             alt="Docker Logo" />
