--- a/embra_connect_modules/server/public/pages/config.html
+++ b/embra_connect_modules/server/public/pages/config.html
@@ -21,8 +21,8 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <!-- =================================== -->
 
-  <link rel="stylesheet" href="../static/css/common/preloader.css">
-  <script src="../static/js/scripts/common/preloader.js"></script>
+  <!-- <link rel="stylesheet" href="../static/css/common/preloader.css">
+  <script src="../static/js/scripts/common/preloader.js"></script> -->
 </head>
 
 <body>
