Add contrib documentation, update styling

--- a/embra_connect_modules/server/public/pages/dashboard.html
+++ b/embra_connect_modules/server/public/pages/dashboard.html
@@ -49,7 +49,7 @@
                             <!-- Link -->
                             <a href="./editor.html" class="link">
                                 <ion-icon name="book" class="side-menu-icon"></ion-icon>
-                                Code Editor
+                                Connect IDE
                             </a>
                         </li>
                         <!-- Link item -->
