--- a/embra_connect_modules/server/public/pages/config.html
+++ b/embra_connect_modules/server/public/pages/config.html
@@ -52,7 +52,7 @@
               <!-- Link -->
               <a href="./editor.html" class="link">
                 <ion-icon name="book" class="side-menu-icon"></ion-icon>
-                Code Editor
+                Connect IDE
               </a>
             </li>
             <!-- Link item -->
