--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -28,86 +28,13 @@
     <!-- Main container -->
     <div class="container">
       <div class="content">
-        <!-- Side bar menu -->
-        <menu class="side-bar-menu">
-          <div class="logo-container">
-            <img src="../assets/png/color_logo_no_bg.png" alt="logo" class="logo" />
-          </div>
-
-          <!-- Navigation links -->
-          <ul class="side-nav-links">
-            <!-- Link item -->
-            <li class="link-item">
-              <!-- Link -->
-              <a href="./dashboard.html" class="link">
-                <ion-icon name="grid" class="side-menu-icon"></ion-icon>
-                Dashboard
-              </a>
-            </li>
-            <!-- Link item -->
-            <li class="link-item active">
-              <!-- Link -->
-              <a href="./editor.html" class="link active">
-                <ion-icon name="book" class="side-menu-icon active-icon"></ion-icon>
-                Code Editor
-              </a>
-            </li>
-            <!-- Link item -->
-            <li class="link-item">
-              <!-- Link -->
-              <a href="#" class="link">
-                <ion-icon name="document-text" class="side-menu-icon"></ion-icon>
-                Reports
-              </a>
-            </li>
-            <!-- Link item -->
-            <li class="link-item">
-              <!-- Link -->
-              <a href="#" class="link">
-                <ion-icon name="bar-chart" class="side-menu-icon"></ion-icon>
-                Analytics
-              </a>
-            </li>
-            <!-- Link item -->
-            <li class="link-item">
-              <!-- Link -->
-              <a href="./config.html" class="link">
-                <ion-icon name="magnet" class="side-menu-icon"></ion-icon>
-                Connection
-              </a>
-            </li>
-
-            <!-- Stats section -->
-            <section class="stats">
-              <li class="link-item">
-                <a href="#" class="link">
-                  <ion-icon name="caret-down-circle" class="side-menu-icon stats-icon"></ion-icon>
-                  Stats
-                </a>
-              </li>
-
-              <!-- Canvas -->
-              <canvas id="stats-chart"></canvas>
-            </section>
-
-            <!-- Link item -->
-            <li class="user-profile">
-              <div class="profile-wrapper">
-                <ion-icon name="person" class="side-menu-icon profile-icon"></ion-icon>
-                <!-- Link -->
-                <a href="#" class="profile-link"> EC User </a>
-              </div>
-            </li>
-          </ul>
-        </menu>
-
         <!-- Page content -->
         <div id="page-content" class="page-content">
           <!-- Preloader -->
           <div id="loader"></div>
           <!-- Interactive Code Editor -->
-          <iframe title="notebook" id="editor" class="notebook"
-            src="/embra_connect_modules/connect_ide/editor/index.html" width="100%"></iframe>
+          <iframe title="notebook" id="editor" class="notebook" src="./connect_ide/editor/index.html"
+            width="100%"></iframe>
         </div>
       </div>
 
