--- a/embra_connect_modules/server/public/pages/config.html
+++ b/embra_connect_modules/server/public/pages/config.html
@@ -66,7 +66,7 @@
             <!-- Link item -->
             <li class="link-item">
               <!-- Link -->
-              <a href="#" class="link">
+              <a href="http://localhost:3000/setup" class="link">
                 <ion-icon name="bar-chart" class="side-menu-icon"></ion-icon>
                 Analytics
               </a>
