Update submodules, update file server, update editor url

--- a/embra_connect_modules/server/public/index.html
+++ b/embra_connect_modules/server/public/index.html
@@ -53,15 +53,11 @@
           <!-- CTA buttons -->
           <div class="cta-btns">
             <button class="btn navigate-to-dashboard">
-              <a href="./pages/dashboard.html">View Dashboard</a>
+              <a href="http://localhost:8897/index.html">Create an Account</a>
             </button>
 
             <button class="btn navigate-to-dashboard">
-              Create an Account
-            </button>
-
-            <button class="btn navigate-to-dashboard">
-              Sign In
+              <a href="http://localhost:8897/login/index.html">Sign In</a>
             </button>
 
             <button class="btn navigate-to-dashboard">Documentation</button>
