--- a/embra_connect_modules/server/public/pages/config.html
+++ b/embra_connect_modules/server/public/pages/config.html
@@ -50,7 +50,7 @@
             <!-- Link item -->
             <li class="link-item">
               <!-- Link -->
-              <a href="./editor.html" class="link">
+              <a href="http://localhost:8899/index.html" class="link">
                 <ion-icon name="book" class="side-menu-icon"></ion-icon>
                 Connect IDE
               </a>
