--- a/embra_connect_modules/server/public/pages/editor.html
+++ b/embra_connect_modules/server/public/pages/editor.html
@@ -33,7 +33,7 @@
           <!-- Preloader -->
           <div id="loader"></div>
           <!-- Interactive Code Editor -->
-          <iframe title="notebook" id="editor" class="notebook" src="./connect_ide/editor/index.html"
+          <iframe title="notebook" id="editor" class="notebook" src="http://localhost:8899/index.html"
             width="100%"></iframe>
         </div>
       </div>
