UI updates, update submodules

--- a/embra_connect_modules/server/public/pages/dashboard.html
+++ b/embra_connect_modules/server/public/pages/dashboard.html
@@ -92,9 +92,7 @@
                             <div class="profile-wrapper">
                                 <ion-icon name="person" class="side-menu-icon profile-icon"></ion-icon>
                                 <!-- Link -->
-                                <a href="#" class="profile-link">
-                                    EC User
-                                </a>
+                                <div class="profile-link"></div>
                             </div>
                         </li>
                     </ul>
@@ -129,8 +127,9 @@
                             <!-- Trend Analysis -->
                             <div class="dashboard-stat-card">
                                 <div class="dashboard-card-content">
-                                    <h2 id="trend-title" class="dashboard-stat-card-title">
+                                    <h2 class="dashboard-stat-card-title">
                                         <ion-icon name="trending-up" class="trend-icon"></ion-icon>
+                                        <span id="trend-title"></span>
                                     </h2>
                                     <p id="trend-info" class="dashboard-stat-card-info"></p>
 
