Consolidate web pages

--- a/embra_connect_modules/services/web_app/public/pages/dashboard/index.html
+++ b/embra_connect_modules/services/web_app/public/pages/dashboard/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- =================================== -->
+
+    <script src="../../static/js/main/constants.js"></script>
 </head>
 
 <body>
