--- a/embra_connect_modules/services/web_app/public/pages/login/index.html
+++ b/embra_connect_modules/services/web_app/public/pages/login/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../assets/favicons/favicon.ico" type="image/x-icon">
 
     <!-- Icons -->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -14,6 +15,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <link rel="stylesheet" href="../../static/css/auth/login.css">
+    <script src="../../static/js/main/constants.js"></script>
 
     <title>Embra Connect | Log In</title>
 </head>
