--- a/embra_connect_modules/services/web_app/public/pages/workspaces/index.html
+++ b/embra_connect_modules/services/web_app/public/pages/workspaces/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
     <link rel="stylesheet" href="../../static/css/auth/workspaces.css">
+    <script src="../../static/js/main/constants.js"></script>
 
     <title>Embra Connect | Workspaces</title>
 </head>
