Update client side logic

--- a/embra_connect_modules/services/web_app/public/pages/config.html
+++ b/embra_connect_modules/services/web_app/public/pages/config.html
@@ -9,11 +9,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Embra Connect | ETL" />
   <meta property="og:description"
-    content="Embra Connect is an open-source tool designed to streamline your ETL processes, making data integration simpler and more efficient. Unlike Databricks, Embra Connect can be run both locally and in the cloud, providing unmatched flexibility for data professionals." />
-  <meta property="og:url" content="http://localhost:5500" />
-  <meta property="og:image" content="http://localhost:5500/assets/padded_logo.png" />
+    content="Embra Connect is an open-source tool designed to streamline your ETL processes, making data integration simpler and more efficient." />
+  <meta property="og:url" content="http://ecetl.com" />
+  <meta property="og:image" content="http://ecetl.com/assets/padded_logo.png" />
   <title>Embra Connect | Connection Configuration</title>
-  <link rel="stylesheet" href="../static/css/style.css" />
+  <link rel="stylesheet" href="../static/css/main/style.css" />
   <link rel="shortcut icon" href="../assets/favicons/favicon.ico" type="image/x-icon" />
 
   <!--============= TOASTER ============= -->
@@ -21,8 +21,6 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <!-- =================================== -->
 
-  <!-- <link rel="stylesheet" href="../static/css/common/preloader.css">
-  <script src="../static/js/scripts/common/preloader.js"></script> -->
 </head>
 
 <body>
@@ -42,7 +40,7 @@
             <!-- Link item -->
             <li class="link-item">
               <!-- Link -->
-              <a href="./dashboard.html" class="link">
+              <a href="./dashboard/index.html" class="link">
                 <ion-icon name="grid" class="side-menu-icon"></ion-icon>
                 Dashboard
               </a>
@@ -50,9 +48,9 @@
             <!-- Link item -->
             <li class="link-item">
               <!-- Link -->
-              <a href="http://localhost:8899/index.html" class="link">
-                <ion-icon name="book" class="side-menu-icon"></ion-icon>
-                Connect IDE
+              <a href="./workspaces/index.html" class="link">
+                <ion-icon name="albums" class="side-menu-icon"></ion-icon>
+                Workspaces
               </a>
             </li>
             <!-- Link item -->
