--- a/embra_connect_modules/services/web_app/public/pages/editor/index.html
+++ b/embra_connect_modules/services/web_app/public/pages/editor/index.html
@@ -158,7 +158,7 @@
                             <div class="command-info">
                                 <ion-icon name="construct"></ion-icon>
                                 <h3 id="current-command">
-                                    Current Command: None
+                                    Previous Command: None
                                 </h3>
                                 <span id="command-status" class="status idle">
                                     <ion-icon name="warning"></ion-icon>
