Update command panel logic

--- a/embra_connect_modules/services/web_app/public/pages/editor/index.html
+++ b/embra_connect_modules/services/web_app/public/pages/editor/index.html
@@ -120,7 +120,7 @@
                     <h2 class="toggle-text">
                         Click here to <span>show/hide</span> the Command Panel
                     </h2>
-                    <ion-icon name="chevron-up-outline"></ion-icon>
+                    <ion-icon name="chevron-up-outline" class="caret-icon"></ion-icon>
                 </button>
 
                 <!-- Command input -->
